Put client settings headers on connection setup